Fix post age layout bug

--- a/ReportDumpAPI/ReportDumpAPI/content/styles/global-styles.css
+++ b/ReportDumpAPI/ReportDumpAPI/content/styles/global-styles.css
@@ -164,7 +164,7 @@ header h1 {
 
 .postAge {
     text-align: left;
-    width: 170px;
+    width: 190px;
 }
 
 .viewCount {
